--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,6 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/.vs/Desktop Server/v15/Server/sqlite3/db.lock
+/.vs/Desktop Server/v15/Server/sqlite3/storage.ide-shm
+/.vs/Desktop Server/v15/Server/sqlite3/storage.ide-wal
